Baseline of customizations for user site.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,9 +1,8 @@
+<!--
+    Main menu list for navigating the primary areas of the web site.
+-->
 
-<div class="nav">
-  <nav>
-    <ul>
-      <li><a href="{{ site.url }}/index.html" id="intro">Home</a></li>
-      <li><a href="{{ site.url }}/about.html" id="intro">About</a></li>
-    </ul>
-  </nav>
+<div class="topnav">
+  <a href="{{ site.url }}/index.html" id="intro">Home</a>
+  <a href="{{ site.url }}/about.html" id="intro">About</a><
 </div>
