--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -13,32 +13,24 @@
   </head>
 
   <body>
+      {% include navbar.html %}
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <!-- a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a -->
-
-          <div style="display:inline-block;vertical-align:top;margin-right:10px">
-	          {% avatar mjordan56 size=100 %}
-	      </div>
-          <div style="display:inline-block;">
+      <!-- HEADER -->
+      <div class="headerrow">
+          <div id="avatar_wrap" class="headerimage col-3 col-m-3">
+              {% avatar mjordan56 size=100 %}
+          </div>
+          <div class="headertext col-9 col-m-9">
               <h1 id="project_title">{{ page.title | default: site.github.repository_name }}</h1>
               <h2 id="project_tagline">{{ page.description | default: site.github.project_tagline }}</h2>
           </div>
+      </div>
 
-          {% if site.show_downloads %}
-            <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
-            </section>
-          {% endif %}
-        </header>
-    </div>
+      <div style="content='';clear:both;display:table;"></div>
+
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      {% include navbar.html %}
       <section id="main_content" class="inner">
         {{ content }}
       </section>
@@ -53,16 +45,5 @@
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    {% if site.google_analytics %}
-      <script type="text/javascript">
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
-      </script>
-    {% endif %}
   </body>
 </html>
