--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,9 @@
 ---
 
 @import "{{ site.theme }}";
+@import "responsive.scss";
+@import "customizations.scss";
+@import "topnavbar.scss";
 
 div.nav {
     li {
@@ -13,14 +16,4 @@ div.nav {
         display: block;
         width: 60px;
     }
-}
-
-#shinyrobot {
-    border: none;
-    outline: none;
-    box-shadow: none;
-    position: absolute;
-    float: left;
-    transform-origin: top;
-    transform: matrix(-0.4, 0, 0, 0.4, -50, -5);
 }
