Fixed navbar and added resume

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,5 +4,7 @@
 
 <div class="topnav">
   <a href="{{ site.url }}/index.html" id="intro">Home</a>
-  <a href="{{ site.url }}/about.html" id="intro">About</a><
+  <a href="{{ site.url }}/about.html" id="intro">About</a>
 </div>
+
+<div class="topnavspacer" />
