--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -17,6 +17,7 @@
 
       <!-- HEADER -->
       <div class="headerrow">
+          <a id="download_banner" href="assets/docs/Resume_MichaelJordan.pdf" download>Download Resume</a>
           <div id="avatar_wrap" class="headerimage col-3 col-m-3">
               {% avatar mjordan56 size=100 %}
           </div>
