--- a/_sass/customizations.scss
+++ b/_sass/customizations.scss
@@ -53,3 +53,18 @@ body {
 #footer_wrap {
     background: #282c34;
 }
+
+#download_banner {
+  display: block;
+  position: absolute;
+  top:0;
+  right: 10px;
+  z-index: 10;
+  padding: 10px 50px 10px 10px;
+  color: #fff;
+  background: url('../images/icon_download.png') #0090ff no-repeat 95% 50%;
+  font-weight: 700;
+  box-shadow: 0 0 10px rgba(0,0,0,.5);
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
