--- a/_sass/topnavbar.scss
+++ b/_sass/topnavbar.scss
@@ -7,6 +7,11 @@
 .topnav {
     overflow: hidden;
     background-color: #282c34;
+    position: fixed;
+    top: 0;
+    height: 5%;
+    width: 100%;
+    z-index: 1;
 }
 
 .topnav a {
@@ -27,6 +32,11 @@
 
 .topnav .icon {
     display: none;
+}
+
+.topnavspacer {
+    margin: 5% 0 0 0;
+    width: 100%;
 }
 
 @media screen and (max-width: 600px) {
