--- a/_sass/customizations.scss
+++ b/_sass/customizations.scss
@@ -14,6 +14,7 @@ body {
 }
 
 .headerimage {
+    display: none;
 }
 
 .headerimage img {
@@ -25,9 +26,10 @@ body {
     padding: 0 0 0 10px;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 640px) {
     .headerimage {
         padding: 0 10px 0 0;
+        display: inline;
     }
 
     .headerimage img {
