Fixed navigation menu

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,9 +2,29 @@
     Main menu list for navigating the primary areas of the web site.
 -->
 
-<div class="topnav">
-  <a href="{{ site.url }}/index.html" id="intro">Home</a>
-  <a href="{{ site.url }}/about.html" id="intro">About Me</a>
+<!--
+    The primary navigation menu bar for navigating between pages on the site. The horizontal menu in contained within the top navigation bar so as to remain fixed at the top of the screen and doesn't move when the content of the page is scrolled.
+-->
+<div class="topnavbar">
+    <div class="horizontalmenu">
+        <a href="{{ site.url }}/index.html" class="menulistitem">Home</a>
+        <a href="{{ site.url }}/about.html" class="menulistitem">About Me</a>
+    </div>
 </div>
 
-<div class="topnavspacer" />
+<!--
+    The dropdown menu is the alternate navigation menu that is used when the
+    width of the target device is 640px or less. The dropdown menu needs to be a sybling to the top navigation bar so the dropdown menu will remain fixed at the top ove the screen and "float" over the content of the page.
+ -->
+<div class="dropdownmenu">
+    <button id="menubuttonitem" class="menulistitem">&#9776;</button>
+    <div class="dropdownlist">
+        <a href="{{ site.url }}/index.html" class="">Home</a>
+        <a href="{{ site.url }}/about.html" class="">About Me</a>
+    </div>
+</div>
+
+<!--
+    Spacer to adjust the starting position of the content to account for the top navigation bar.
+-->
+<div class="topnavspacer"></div>
