--- a/_sass/topnavbar.scss
+++ b/_sass/topnavbar.scss
@@ -4,34 +4,87 @@
 ** CSS definitions for the top naviation bar.
 */
 
-.topnav {
-    overflow: hidden;
+.topnavbar {
     background-color: #282c34;
+    height: 45px;
+    overflow: hidden;
     position: fixed;
     top: 0;
-    height: 5%;
     width: 100%;
     z-index: 1;
 }
 
-.topnav a {
-    float: left;
-    display: block;
+.menulistitem {
     color: #f2f2f2;
-    width: 80px;
-    text-align: center;
-    padding: 12px 8px 8px 8px;
-    text-decoration: none;
+    display: block;
+    float: left;
     font-size: 17px;
+    padding: 12px 8px 8px 8px;
+    text-align: center;
+    text-decoration: none!important;
+    width: 80px;
 }
 
-.topnav a:hover {
+.topnavbar .menulistitem:hover {
     background-color: #ddd;
     color: black;
 }
 
-.topnav .icon {
+#menubuttonitem {
+    background-color: #282c34;
+    border: 0;
+    border-radius: 0px;
+    box-shadow: none;
+    cursor: pointer;
+    height: 45px;
+    width: 40px;
+}
+
+#menubuttonitem:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.dropdownmenu:hover .dropdownlist {
+    display: block;
+}
+
+.dropdownmenu {
     display: none;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+
+.dropdownlist {
+    background-color: #383c44;
+    box-shadow: 0px 80px 160px 0px rgba(0,0,0,0.2)!important;
+    display: none;
+    min-width: 160px;
+    position: fixed;
+    top: 45px;
+    z-index: 2;
+}
+
+.dropdownlist a {
+    color: #f2f2f2;
+    display: block;
+    font-size: 17px;
+    left: 100px;
+    padding: 12px 8px 8px 25px;
+    text-align: left;
+    text-decoration: none;
+    top: 130px;
+    z-index: 5;
+}
+
+.dropdownlist a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.horizontalmenu {
+    display: block;
 }
 
 .topnavspacer {
@@ -40,24 +93,11 @@
 }
 
 @media screen and (max-width: 640px) {
-    .topnav a:not(:first-child) { display: none;}
-    .topnav a.icon {
-        float: right;
+    .dropdownmenu {
         display: block;
-        background-color: red;
     }
-}
 
-@media screen and (max-width: 640px) {
-    .topnav.responsive { position: relative; }
-    .topnav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
+    .horizontalmenu {
+        display: none;
     }
 }
