Tweaked the layout of the posts

--- a/_sass/customizations.scss
+++ b/_sass/customizations.scss
@@ -42,6 +42,12 @@ body {
     }
 }
 
+#post_title {
+    background: none;
+    color: #fff;
+    margin-left: 14px;
+}
+
 #shinyrobot {
     border: none;
     outline: none;
