--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,18 +16,10 @@
     {% include navbar.html %}
 
     <div class="headerrow" style="background-color: #282c34">
-        <div class="headerimage col-3 col-m-3">
-            <img id="shinyrobot" src={{ site.url | append: "/assets/images/shinybender.png" }} alt="Shiny Robot" style="width:100px;height:200px;">
-        </div>
         <div class="headertext col-9 col-m-9">
-            <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-            <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+            <h2 id="post_title">{{ page.title | default: site.github.repository_name }}</h2>
         </div>
     </div>
-
-    <div style="content='';clear:both;display:table;"></div>
-
-    <div style="clear:both;display:table;"></div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
