--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/shinyobject/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
     <title>{{ page.title | default: site.github.repository_name }}</title>
     {% seo %}
@@ -18,7 +18,7 @@
 
       <!-- HEADER -->
       <div class="headerrow">
-          <a id="download_banner" href="assets/docs/Resume_MichaelJordan.pdf" download>Download Resume</a>
+          <a id="download_banner" href="/shinyobject/assets/docs/Resume_MichaelJordan.pdf" download>Download Resume</a>
           <div id="avatar_wrap" class="headerimage col-3 col-m-3">
               {% avatar mjordan56 size=100 %}
           </div>
