--- a/_layouts/defaultOverride.html
+++ b/_layouts/defaultOverride.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
     <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/shinyobject/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
     <title>{{ site.title | default: site.github.repository_name }}</title>
     {% seo %}
@@ -17,7 +17,7 @@
 
     <div class="headerrow">
         <div class="col-3">
-            <img id="shinyrobot" src="assets/images/shinybender.png" alt="Shiny Robot" style="width:100px;height:200px">
+            <img id="shinyrobot" src="/shinyobject/assets/images/shinybender.png" alt="Shiny Robot" style="width:100px;height:200px">
         </div>
         <div class="col-9">
             <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
@@ -33,7 +33,7 @@
 
               <!--div style="display:inline-block;border:1px solid red;margin: 0" -->
               <div class="headerimage" style="border:1px solid white; padding: 30px;box-sizing:border-box;float:left;width:25%">
-                  <img id="shinyrobot" src="assets/images/shinybender.png" alt="Shiny Robot" style="width:100px;height:200px;" align=right>
+                  <img id="shinyrobot" src="/shinyobject/assets/images/shinybender.png" alt="Shiny Robot" style="width:100px;height:200px;" align=right>
               </div>
               <div style="box-sizing:border-box;float:left;border:1px solid red;margin: 0;width:100%;">
                   <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
