revert url changes and rely on site url config

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,8 +7,8 @@
 -->
 <div class="topnavbar">
     <div class="horizontalmenu">
-        <a href="{{ site.url }}/shinyobject/index.html" class="menulistitem">Home</a>
-        <a href="{{ site.url }}/shinyobject/about.html" class="menulistitem">About Me</a>
+        <a href="{{ site.url }}/index.html" class="menulistitem">Home</a>
+        <a href="{{ site.url }}/about.html" class="menulistitem">About Me</a>
     </div>
 </div>
 
@@ -19,8 +19,8 @@
 <div class="dropdownmenu">
     <button id="menubuttonitem" class="menulistitem">&#9776;</button>
     <div class="dropdownlist">
-        <a href="{{ site.url }}/shinyobject/index.html" class="">Home</a>
-        <a href="{{ site.url }}/shinyobject/about.html" class="">About Me</a>
+        <a href="{{ site.url }}/index.html" class="">Home</a>
+        <a href="{{ site.url }}/about.html" class="">About Me</a>
     </div>
 </div>
 
